--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -8,9 +8,9 @@ name: Lint Code Base
 
 on:
   push:
-    branches: [ * ]
+    branches: [ main ]
   pull_request:
-    branches: [ * ]
+    branches: [ main ]
 jobs:
   run-lint:
     runs-on: ubuntu-latest
