--- a/SourceCode/app/src/main/AndroidManifest.xml
+++ b/SourceCode/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.socialfitnessapp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,16 +13,18 @@
         android:theme="@style/Theme.SocialFitnessApp">
         <activity android:name=".Authentication.RegInfoTwoActivity"></activity>
         <activity android:name=".Authentication.RegInfoOneActivity" />
-        <activity android:name=".Authentication.RegisterActivity" />
+        <activity android:name=".Authentication.RegisterActivity"/>
+
         <activity android:name=".Profile.ProfileActivity" />
-        <activity android:name=".Authentication.LoginActivity" />
-        <activity android:name=".Home.MainActivity">
+        <activity android:name=".Authentication.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Home.MainActivity"/>
+
     </application>
 
 </manifest>
