--- a/SourceCode/app/src/main/AndroidManifest.xml
+++ b/SourceCode/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.socialfitnessapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,20 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SocialFitnessApp">
-        <activity android:name=".Authentication.RegInfoTwoActivity"></activity>
+        <activity android:name=".Social.SocialActivity"></activity>
+        <activity android:name=".Social.TimelineActivity" />
+        <activity android:name=".Social.FriendsActivity" />
+        <activity android:name=".MyDiary.MyDiaryActivity" />
+        <activity android:name=".Authentication.RegInfoTwoActivity" />
         <activity android:name=".Authentication.RegInfoOneActivity" />
-        <activity android:name=".Authentication.RegisterActivity"/>
-
+        <activity android:name=".Authentication.RegisterActivity" />
         <activity android:name=".Profile.ProfileActivity" />
-        <activity android:name=".Authentication.LoginActivity" >
+        <activity android:name=".Authentication.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Home.MainActivity"/>
-
+        <activity android:name=".Home.MainActivity" />
     </application>
 
 </manifest>
