--- a/SourceCode/app/build.gradle
+++ b/SourceCode/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.firebaseui:firebase-ui-database:8.0.0'
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.1'
 }
