--- a/SourceCode/app/src/main/AndroidManifest.xml
+++ b/SourceCode/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SocialFitnessApp">
-        <activity android:name=".Social.FindFriendActivity"></activity>
+        <activity android:name=".Social.ViewProfileActivity">
+            android:theme="@style/Theme.Transparent"
+        </activity>
+        <activity android:name=".Social.FindFriendActivity">
+            android:windowSoftInputMode="adjustNothing"
+        </activity>
         <activity android:name=".Profile.EditProfileActivity" />
         <activity android:name=".Social.SocialActivity" />
         <activity android:name=".Social.TimelineActivity" />
